Fix: Experience position responsive overlap

--- a/styles.css
+++ b/styles.css
@@ -367,6 +367,7 @@ article .icon {
     flex-direction: column;
     gap: 1rem;
     justify-content: space-between;
+    padding-top: 2rem;
 }
 
 .job-info-container {
@@ -378,6 +379,7 @@ article .icon {
 
 .job-name-position-details-container {
     width: 70%;
+    padding-right: 2rem;
 }
 
 .job-name-position {
